add home section

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,17 @@
-<p>home works!</p>
+<section class="home pt-5">
+    <div class=" pt-4 h-100">
+        <div class="row m-0 h-100">
+            <div class="col-md-3  offset-1">
+                <div class="d-flex flex-column justify-content-evenly align-items-center w-100 h-100">
+                    <div>
+                        <h4>Find, book and <br> rent a car <span class="easily">Easily</span></h4>
+                        <p>Get a car wherever and whenever you need it with your IOS and Android device.</p>
+                        <img src="../../../assets/images/google.svg" class="google" alt="">
+                        <img src="../../../assets/images/image 3.svg" class="app-store" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8 img "></div>
+        </div>
+    </div>
+</section>
