--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<!-- <app-layout></app-layout> -->
+<app-search-bar></app-search-bar>
+<app-car-details></app-car-details>
