--- a/src/app/components/car-details/car-details.component.html
+++ b/src/app/components/car-details/car-details.component.html
@@ -1,1 +1,55 @@
-<p>car-details works!</p>
+<section class="my-5">
+    <app-button [btnName]="'POPULAR RENTAL DEALS'" [header]="'Most popular cars rental deals'"></app-button>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card p-4 border-0">
+                    <div class="uper-card">
+                        <img src="../../../assets/images/image 12.png" class="w-100" alt="">
+                    </div>
+
+                    <h6>Jaguar XE L P250</h6>
+                    <p>
+                        <i class="fa fa-star " aria-hidden="true"></i>
+                        <span class="px-2">4.8</span>
+                        <span class="text-muted">(2.436 reviews)</span>
+                    </p>
+                    <div class="d-flex justify-content-between">
+                        <ul class="list-unstyled my-3">
+                            <li>
+                                <i class="fa-regular fa-user"></i>
+                                <span class="px-1">4 Passagers</span>
+                            </li>
+                            <li>
+                                <img src="../../../assets/images/cold.svg" alt="">
+                                <span class="px-1">Air Conditioning</span>
+                            </li>
+                        </ul>
+                        <ul class="list-unstyled my-3">
+                            <li>
+                                <img src="../../../assets/images/gear.svg" alt="">
+                                <span class="px-1">Auto</span>
+                            </li>
+                            <li>
+                                <img src="../../../assets/images/car-door.svg" alt="">
+                                <span class="px-1">4 Doors</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="d-flex justify-content-between">
+                        <h6>Price</h6>
+                        <p>$1800 <span class="text-muted">/day</span> </p>
+                    </div>
+                    <div class="">
+                        <button class="btn btn-rent  w-100"> Rent Now <i
+                                class="fa-solid fa-arrow-right-long"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <button class="btn btn-show"> Show all vehicles <i class="fa-solid fa-arrow-right-long"></i> </button>
+
+    </div>
+</section>
