--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,14 +1,14 @@
-<nav class="navbar navbar-expand-lg bg-body-transparent ">
-    <div class="container justify-content-center align-items-center">
-        <a class="navbar-brand" href="#"><img src="../../../assets/images/nav/logo.png" alt=""></a>
+<nav class="navbar navbar-expand-lg ">
+    <div class="container ">
+        <a class="navbar-brand text-primary fw-bold" href="#"><img src="../../../assets/images/nav/Frame.svg" alt=""> RENTCARS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fa-solid fa-grip-lines"></i>
         </button>
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link">Become a renter</a>
+                    <a routerLink="" class="nav-link">Become a renter</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link">Rental deals</a>
@@ -22,8 +22,8 @@
             </ul>
             <div class="list-unstyled">
                 <div >
-                    <button class="btn btn-transpatent">Sign In</button>
-                    <button class="btn btn-primary">Sign Up</button>
+                    <button class="btn btn-transpatent ">Sign In</button>
+                    <button class="btn btn-primary px-5">Sign Up</button>
                 </div>
               
             </div>
