make the rest of page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
-<!-- <app-layout></app-layout> -->
-<app-search-bar></app-search-bar>
-<app-car-details></app-car-details>
+
+<router-outlet></router-outlet>
+
+<app-footer></app-footer>
+
