--- a/src/app/components/cars-page/cars-page.component.html
+++ b/src/app/components/cars-page/cars-page.component.html
@@ -1,1 +1,130 @@
-<p>cars-page works!</p>
+<section>
+    <div class="container py-5 mt-5">
+        <div class="row">
+            <div class="col-md-3 my-2 ">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+            <div class="col-md-3 my-2">
+                <app-card-details></app-card-details>
+            </div>
+           
+        </div>
+    </div>
+</section>
