--- a/src/app/components/choose-us/choose-us.component.html
+++ b/src/app/components/choose-us/choose-us.component.html
@@ -1,1 +1,28 @@
-<p>choose-us works!</p>
+<section>
+    <div class="container">
+        <div class="row ">
+            <div class="col-md-6">
+                <div class="bg-car d-flex align-items-center">
+                    <img src="../../../assets/images/choose-us/Audi 1.svg" alt="">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="pt-5">
+                    <app-button [btnName]="'WHY CHOOSE US'"
+                        [header]="'We offer the best experience with our rental deals'"></app-button>
+                </div>
+               <app-icon [img]="'../../../assets/images/choose-us/wallet.svg'" [title]="'Best price guaranteed'" para="Find a lower price? We’ll refund you 100% of the difference."></app-icon>
+
+               <app-icon [img]="'../../../assets/images/choose-us/user-tick.svg'" [title]="'Experience driver'" para="Don’t have driver? Don’t worry, we have many
+               experienced driver for you."></app-icon>
+
+               <app-icon [img]="'../../../assets/images/choose-us/24-support.svg'" [title]="'24 hour car delivery'" para="Book your car anytime and we will deliver it
+               directly to you."></app-icon>
+
+               <app-icon [img]="'../../../assets/images/choose-us/messages-2.svg'" [title]="'24/7 technical support'" para="Have a question? Contact Rentcars support
+               any time when you have problem."></app-icon>
+
+            </div>
+        </div>
+    </div>
+</section>
