--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,58 @@
-<p>footer works!</p>
+<section class="text-white">
+    <div class="container py-3">
+        <div class="row">
+            <div class="col-md-4">
+                <div>
+                    <img src="../../../assets/images/footer/Frame993.svg" class="img-fluid" alt="">
+                    <div class="">
+                        <div class="d-flex justify-content-start align-items-center py-2">
+                            <span class="px-1"> <img src="../../../assets/images/footer/location.svg" alt=""> </span>
+                            <span>25566 Hc 1, Glenallen, <br> Alaska, 99588, USA</span>
+                        </div>
+                        <div class="d-flex justify-content-start align-items-center py-2">
+                            <span class="px-1"> <img src="../../../assets/images/footer/call.svg" alt=""> </span>
+                            <span>+603 4784 273 12</span>
+                        </div>
+                        <div class="d-flex justify-content-start align-items-center py-2">
+                            <span class="px-1"> <img src="../../../assets/images/footer/sms.svg" alt=""> </span>
+                            <span>rentcars@gmail.com</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <h5>Our Product</h5>
+                <p>Career</p>
+                <p>Car</p>
+                <p>Packages</p>
+                <p>Features</p>
+                <p>Priceline</p>
+            </div>
+            <div class="col-md-2">
+                <h5>Resources</h5>
+                <p>Dowenload</p>
+                <p>Help Center</p>
+                <p>Guides</p>
+                <p>Partner Network</p>
+                <p>Cruises</p>
+                <p>Developer</p>
+            </div>
+            <div class="col-md-2">
+                <h5>About Rentcars</h5>
+                <p>Why choose us</p>
+                <p>Our Story</p>
+                <p>Investor Relations</p>
+                <p>Press Center</p>
+                <p>Advertise</p>
+            </div>
+            <div class="col-md-2">
+                <h5>Follow Us</h5>
+                <img src="../../../assets/images/footer/facebook.svg" alt="">
+                <img src="../../../assets/images/footer/instagram.svg" class="px-3" alt="">
+                <img src="../../../assets/images/footer/youtube.svg" alt="">
+            </div>
+        </div>
+        <hr>
+        <p class="copy-right">Copyright 2023 ・ Rentcars, All Rights Reserved</p>
+    </div>
+</section>
