--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,1 +1,8 @@
 <app-home></app-home>
+<app-search-bar></app-search-bar>
+<app-rent></app-rent>
+<app-car-type></app-car-type>
+<app-car-details></app-car-details>
+<app-choose-us></app-choose-us>
+<app-testimonials></app-testimonials> 
+<app-dowenload-app></app-dowenload-app>
