--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg ">
+<nav class="navbar navbar-expand-lg" [ngClass]="{'navbar-scrolled': isScrolled}">
     <div class="container ">
         <a class="navbar-brand text-primary fw-bold" href="#"><img src="../../../assets/images/nav/Frame.svg" alt=""> RENTCARS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
