--- a/src/app/components/testimonials/testimonials.component.html
+++ b/src/app/components/testimonials/testimonials.component.html
@@ -1,1 +1,98 @@
-<p>testimonials works!</p>
+<section class="py-5">
+    <div class="text-center button ">
+        <app-button [btnName]="'TESTIMONIALS'" [header]="'What peole say about us?'"></app-button>
+    </div>
+    <owl-carousel-o [options]="customOptions">
+        <ng-template carouselSlide>
+            <div class="container">
+                <div class="card mb-3 rounded-5" style="max-width: 600px;">
+                    <div class="row g-0">
+                        <div class="col-md-5">
+                            <img src="../../../assets/images/testimonials/4527d8fbd6a3241f6301e4fffc82bc0d436aa21d.jpg"
+                                class="img-fluid rounded-start-5" alt="...">
+                        </div>
+                        <div class="col-md-7">
+                            <div class="card-body">
+                                <h2 class="card-title fs-1 ">5.0 <span class="fs-5 text-muted"> stars</span> </h2>
+                                <div class="m-2 text-warning ">
+                                    <i class="fa-solid fa-star "></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <p class="card-text p-4 fs-6">“I feel very secure when using caretall's services. Your
+                                    customer
+                                    care team
+                                    is very enthusiastic and the driver is always on time.”</p>
+                                <p class="card-text m-0 p-0 fs-5  fw-bolder">Charlie Johnson</p>
+                                <p class="text-muted fs-6 m-0 p-0">From New York, US</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </ng-template>
+        <ng-template carouselSlide>
+            <div class="container-fluid">
+                <div class="card mb-3 rounded-5" style="max-width: 600px;">
+                    <div class="row g-0">
+                        <div class="col-md-5">
+                            <img src="../../../assets/images/testimonials/4527d8fbd6a3241f6301e4fffc82bc0d436aa21d.jpg"
+                                class="img-fluid rounded-start-5" alt="...">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card-body">
+                                <h2 class="card-title fs-1 ">5.0 <span class="fs-5 text-muted"> stars</span> </h2>
+                                <div class="m-2 text-warning ">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <p class="card-text p-4 fs-6">“I feel very secure when using caretall's services. Your
+                                    customer
+                                    care team
+                                    is very enthusiastic and the driver is always on time.”</p>
+                                <p class="card-text m-0 p-0 fs-5  fw-bolder">Charlie Johnson</p>
+                                <p class="text-muted fs-6 m-0 p-0">From New York, US</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </ng-template>
+        <ng-template carouselSlide>
+            <div class="container">
+                <div class="card mb-3 rounded-5" style="max-width: 600px;">
+                    <div class="row g-0">
+                        <div class="col-md-5">
+                            <img src="../../../assets/images/testimonials/4527d8fbd6a3241f6301e4fffc82bc0d436aa21d.jpg"
+                                class="img-fluid rounded-start-5" alt="...">
+                        </div>
+                        <div class="col-md-7">
+                            <div class="card-body">
+                                <h2 class="card-title fs-1 ">5.0 <span class="fs-5 text-muted"> stars</span> </h2>
+                                <div class="m-2 text-warning ">
+                                    <i class="fa-solid fa-star "></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <p class="card-text p-4 fs-6">“I feel very secure when using caretall's services. Your
+                                    customer
+                                    care team
+                                    is very enthusiastic and the driver is always on time.”</p>
+                                <p class="card-text m-0 p-0 fs-5  fw-bolder">Charlie Johnson</p>
+                                <p class="text-muted fs-6 m-0 p-0">From New York, US</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </ng-template>
+    </owl-carousel-o>
+
+</section>
