--- a/src/app/components/card-details/card-details.component.html
+++ b/src/app/components/card-details/card-details.component.html
@@ -1,1 +1,43 @@
-<p>card-details works!</p>
+<div class="card p-4 border-0 ">
+    <div class="uper-card">
+        <img src="../../../assets/images/image 12.png" class="w-100" alt="">
+    </div>
+    <div class="text-start ">
+        <h6>Jaguar XE L P250</h6>
+        <p>
+            <i class="fa fa-star "></i>
+            <span class="px-2">4.8</span>
+            <span class="text-muted">(2.436 reviews)</span>
+        </p>
+    </div>
+    <div class="d-flex justify-content-between text-start">
+        <ul class="list-unstyled my-3">
+            <li>
+                <i class="fa-regular fa-user text-muted"></i>
+                <span class="px-1">4 Passagers</span>
+            </li>
+            <li>
+                <i class="fa-regular fa-snowflake text-muted"></i>
+                <span class="px-1">Air Conditioning</span>
+            </li>
+        </ul>
+        <ul class="list-unstyled my-3">
+            <li>
+                <img src="../../../assets/images/gear.svg" alt="">
+                <span class="px-1">Auto</span>
+            </li>
+            <li>
+                <img src="../../../assets/images/car-door.svg" alt="">
+                <span class="px-1">4 Doors</span>
+            </li>
+        </ul>
+    </div>
+    <hr>
+    <div class="d-flex justify-content-between">
+        <h6>Price</h6>
+        <p>$1800 <span class="text-muted">/day</span> </p>
+    </div>
+    <div class="">
+        <button class="btn btn-rent  w-100"> Rent Now <i class="fa-solid fa-arrow-right-long"></i></button>
+    </div>
+</div>
