--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,6 @@
-<p>not-found works!</p>
+<section>
+    <div class="text-center">
+        <button class="btn btn-outline-primary" routerLink="/home" >Back To Home </button>
+        <img src="../../../assets/images/notfound/404-error-page-found-concept-illustration_108061-173.jpg" alt="">
+    </div>
+</section>
