--- a/src/app/components/rent/rent.component.html
+++ b/src/app/components/rent/rent.component.html
@@ -1,1 +1,41 @@
-<p>rent works!</p>
+<section>
+    <app-button [btnName]="'HOW IT WORK'" [header]="'Rent with following 3 working steps'"></app-button>
+
+    <div class="container">
+        <div class="row  justify-content-center align-items-center mb-4">
+            <div class="col-md-3">
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                    <div class="shild d-flex justify-content-center align-items-center my-2">
+                        <img src="../../../assets/images/rent/location-tick.svg" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Choose Location</h4>
+                        <p class="text-center text-sm">Choose your and find <br>your best car</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                    <div class="shild d-flex justify-content-center align-items-center my-2">
+                        <img src="../../../assets/images/rent/calendar.svg" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Pick-up date</h4>
+                        <p class="text-center text-sm">Select your pick up date and<br>time to book your car</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="d-flex flex-column justify-content-center align-items-center">
+                    <div class="shild d-flex justify-content-center align-items-center my-2">
+                        <img src="../../../assets/images/rent/car.svg" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Book your car</h4>
+                        <p class="text-center text-sm">Book your car and we will deliver <br> it directly to you</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
