--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
-<section class="m-auto w-75 mt-5">
+<section class="m-auto w-75 mt-5 mb-4">
     <div class="position-relative ">
         <img src="../../../assets/images/location.svg" alt="">
         <input class="form-control  px-5" type="text" placeholder="  Search By Name" name="" id="">
